# redgw-lite

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  build.sh  docker-compose.yml
app/: config.py  config_validator.py  dependencies.py  main.py  middleware.py  redis_client.py
app/audit/: __init__.py  banner.py  logger.py  middleware.py
app/auth/: api_key.py  namespace_guard.py
app/routers/: __init__.py  admin.py  event.py  group.py  kv.py  map.py  pubsub.py  queue.py  rank.py
app/schemas/: admin.py  common.py  event.py  group.py  kv.py  map.py  pubsub.py  queue.py  rank.py
app/utils/: file_logger.py  key_builder.py  metrics.py  response.py  ttl.py  validation.py
config/: config.yaml
grafana/dashboards/: redgw.json
nginx/: nginx.conf.template
prometheus/: prometheus.yml
redgw_core/: Cargo.toml  pyproject.toml
redgw_core/src/: key_builder.rs  lib.rs  validation.rs
redisinsight/: init.sh
resource/: entrypoint.sh  pyproject.toml  requirements.txt
scripts/: curl_tests.sh  pytest.sh  rust_build.sh
tests/: conftest.py  test_00_health.sh  test_01_kv.sh  test_02_map.sh  test_03_queue.sh  test_04_group.sh  test_05_rank.sh  test_06_event.sh  test_07_pubsub.sh  test_08_admin.sh  test_09_auth.sh  test_10_e2e_scenario.sh  test_admin.py  test_audit.py  test_auth.py  test_config_validator.py  test_event.py  test_file_logger.py  test_group.py  test_kv.py  test_leader_election.py  test_main.py  test_map.py  test_pubsub.py  test_queue.py  test_rank.py  test_serialization.py
(+4 files in other folders)
